[package]
name = "whistle"
description = " whistle in the browser"
repository = "https://github.com/whistle-lang/whistle_web"
license = "MIT"
version = "0.1.3"
authors = ["Elias Sjögreen", "Filippo Rossi"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }
whistle_common = { path = "./src/common/" }
whistle_lexer = { path = "./src/lexer/" }
whistle_ast = { path = "./src/ast/" }
whistle_parser = { path = "./src/parser/" }
whistle_scripts = { path = "./src/scripts" }
#whistle_compiler = { path = "./src/compiler/" }

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
default = ["wee_alloc"]
